<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">PersonalBills-OneActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	 <string name="data_textivew">输入日期</string>
	<string name="activity_textivew">活动</string>
	<string name="info">说明</string>
	<string name="expenditure_textivew">支出</string>
	<string name="OK_button">确定</string>
	<string name="add_button">添加</string>
	<string name="broser_button">浏览</string>
	<string name="cancel">取消</string>
	<string name="create_password">创建密码</string>
	<string name="input_password">输入密码</string>
	<string name="input_password_again">再次输入密码</string>
	<string name="incorrect_password">密码不正确</string>
	<string name="day_string">日</string>
	<string name="month_string">月</string>
	<string name="week_string">周</string>
	<string name="today_string">今天</string>
	<string name="yesterday_string">昨天</string>
	<string name="tomorrow_string">明天</string>	
	<string name="aganda_today">今天 ,<xliff:g id="date">%1$2s</xliff:g></string>
	<string name="aganda_yesterday">昨天,<xliff:g id="date">%1$2s</xliff:g></string>
	<string name="aganda_tomorrow">明天,<xliff:g id="date">%1$2s</xliff:g></string>
</resources>
